# fiole

./: Cargo.toml  README.md
.ki/: config.json
src/: database.rs  keyspace.rs  lib.rs  txn.rs
src/codec/: bytes.rs  compose_codec.rs  decoding.rs  encoding.rs  facet_json.rs  facet_msgpack.rs  facet_postcard.rs  integer.rs  lazy.rs  mod.rs  rkyv.rs  roaring.rs  serde_json.rs  serde_msgpack.rs  serde_postcard.rs  sized_codec.rs  str.rs  unit.rs
